# edu-DirMonitor-Client

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.5b728ef  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: client.cpp  client.h
